--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  flutter_signature_pad: ^3.0.1
   cupertino_icons: ^1.0.6
+  pdf: ^3.10.8
+  path_provider: ^2.1.3
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
