--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   pdf: ^3.10.8
   path_provider: ^2.1.3
   google_fonts: ^6.2.1
+  flutter_to_pdf: ^0.2.0
 
 dev_dependencies:
   flutter_test:
